--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://user:password@db:5432/rebels_db
+DATABASE_URL=postgresql://user:password@db:5432/db
 REDIS_URL=redis://redis:6379/0
 OPENROUTER_API_KEY=your_openrouter_key
