--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "lucide-react": "^0.321.0",
-    "axios": "^1.6.7",
-    "framer-motion": "^11.0.3",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "next": "^15.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "lucide-react": "^0.474.0",
+    "axios": "^1.7.9",
+    "framer-motion": "^12.4.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.0.1",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "^15.1.6"
   }
 }
